fix whitespace

--- a/wordpress/wp-content/themes/kaidez-swiss/style.css
+++ b/wordpress/wp-content/themes/kaidez-swiss/style.css
@@ -2076,6 +2076,9 @@ a.home-link:active{color:#ed327f;text-decoration:none;font-weight:900}
 .searchform-class{position:relative;top:60px}
 .entry-header{margin-bottom:20px}
 .entry-title{font-size:40px;font-size:4rem}
-.main-navigation{opacity:0;position:relative;bottom:35px}
+.main-navigation{opacity:0;position:absolute;bottom:35px}
+.menu-item a{color:#000;text-decoration:none}
+.menu-item a:hover{color:#000;text-decoration:underline}
+.menu-item a:visited{color:#000;text-decoration:none}
 .aside,.content-area{padding:0 15px}
 }
